Bug 1835556 - Fix moving Maildir-based virtual folders. r=BenC

Differential Revision: https://phabricator.services.mozilla.com/D275356

--HG--
extra : amend_source : 45e99e5c9d9dfd7a0edb4c184a2d67d42c9585ff